feat: refactor weight controller