@@ -9,15 +9,15 @@ import slt.database.entities.Food;
 import jakarta.transaction.Transactional;
 import java.util.List;
 
-interface FoodCrudRepository extends CrudRepository<Food, Integer> {
+interface FoodCrudRepository extends CrudRepository<Food, Long> {
 
-    List<Food> findByUserId(Integer userId);
+    List<Food> findByUserId(final Long userId);
 
-    List<Food> findByUserIdAndName(Integer userId, String name);
+    List<Food> findByUserIdAndName(final Long userId, String name);
 
-    List<Food> findByUserIdAndId(Integer userId, Long id);
+    List<Food> findByUserIdAndId(final Long userId, Long id);
 
-    void deleteByUserId(Integer userId);
+    void deleteByUserId(final Long userId);
 }
 
 @Repository
@@ -26,28 +26,28 @@ public class FoodRepository {
     @Autowired
     private FoodCrudRepository foodCrudRepository;
 
-    public List<Food> getAllFood(Integer userId) {
+    public List<Food> getAllFood(final Long userId) {
         return foodCrudRepository.findByUserId(userId);
     }
 
-    public Food saveFood(Integer userId, Food food) {
+    public Food saveFood(final Long userId, Food food) {
         food.setUserId(userId);
         return foodCrudRepository.save(food);
     }
     
-    public Food getFood(Integer userId, String name) {
+    public Food getFood(final Long userId, String name) {
         List<Food> queryResults = foodCrudRepository.findByUserIdAndName(userId, name);
-        return queryResults.isEmpty() ? null : queryResults.get(0);
+        return queryResults.isEmpty() ? null : queryResults.getFirst();
     }
 
-    public Food getFoodById(Integer userId, Long id) {
+    public Food getFoodById(final Long userId, Long id) {
         List<Food> queryResults = foodCrudRepository.findByUserIdAndId(userId, id);
         Assert.isTrue(queryResults.size() <= 1, "More than one food was found");
-        return queryResults.isEmpty() ? null : queryResults.get(0);
+        return queryResults.isEmpty() ? null : queryResults.getFirst();
     }
 
     @Transactional
-    public void deleteAllForUser(Integer userId) {
+    public void deleteAllForUser(final Long userId) {
         foodCrudRepository.deleteByUserId(userId);
     }
 }
